grammar.peggy
start
  = "[" ws stage:stage (ws "," ws stage)* ws "]" { return [stage]; }

stage
  = ws  "{" ws  "$" type:("group"i / "match"i) ws  ":" ws  stage:(groupStage / matchStage) ws  "}" { return {type, ...stage}; }

groupStage
  = "{" ws  "_id" ws  ":" ws  groupId:expressionValue ws accumulators:groupAccumulator* "}" { return {_id: groupId, accumulators: accumulators}; }

groupAccumulator
  = "," ws  outputFieldName:outputField ws  ":" ws "{" ws expression:groupExpression ws "}" ws  { return { outputField: outputFieldName, ...expression }; }

groupExpression
  = "$" operator:groupOperator ws ":" ws values:(expressionValueArray / expressionValue) { return { operator, values }; }

expressionValueArray
  = "[" ws value:expressionValue ws values:expressionValueSeparated* ws "]" { return [value, ...values]; }

expressionValueSeparated
  = ws "," ws value:expressionValue ws { return value; }

groupOperator
  = "addToSet"i / "avg"i / "first"i / "last"i / "max"i / "min"i / "push"i / "sum"i

matchStage
  =  conditions:(logicalOperatorCondition / matchCondition)*  { return {conditions}; }

logicalOperatorCondition
  = "{" ws "$" operator:("and"i / "or"i / "not"i) ws ":" ws "[" ws conditions:(logicalOperatorCondition / matchCondition)* ws "]" ws "}" { return { operator, conditions }; }

matchCondition
  = "{" ws fieldName:identifier ws  ":" ws condition:(comparisonOperator / simpleValue) ws "}" { return { fieldName, ...condition }; }

comparisonOperator
  = "{" ws "$" operator:("eq"i / "ne"i / "gt"i / "gte"i / "lt"i / "lte"i) ws ":" ws value:expressionValue ws "}" { return { operator, value }; }

simpleValue
  = expressionValue

conditionSeparated
  = ws "," ws condition:condition ws { return condition; }

condition
  = field:fieldReference ws  ":" ws  value:expressionValue { return { field, value }; }

expressionValue
  = 
  fieldReference
  / expression
  / string
  / boolean
  / null
  / number
  / expressionValueArray

expression
  = "{" ws "$" operator:expressionOperator ws  ":" ws  value:expressionValue ws "}" { return { operator, value }; }

expressionOperator
  = "add"i / "subtract"i / "multiply"i / "divide"i / "toUpper"i / "toLower"i / "cond"i / "gte"i

fieldReference
  = '"$' chars:[^"]* '"' { return { field: chars.join('') } }
  / identifier

outputField
  = identifier

identifier
  = firstLetter:[a-zA-Z_] restLetters:[a-zA-Z0-9_]* { return firstLetter + restLetters.join(''); }

number
  = "-"? [0-9]+ ("." [0-9]+)? (("e"i / "E") ("+" / "-")? [0-9]+)? { return parseInt(text()); }

string
  = '"' chars:[^"]* '"' { return chars.join(''); }
  / "'" chars:[^']* "'" { return chars.join(''); }

boolean
  = "true"i { return true; }
  / "false"i { return false; }

null
  = "null"i { return null; }

ws "whitespace"
  = [ \t\n\r]*
